tests/diagnostics/catalog/snapshots/ir/IR0043.snap
error[IR0043]: IR_E_INVALID_STATEMENT
 --> tests/diagnostics/catalog/sources/ir/IR0043.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0043
  = help: keep IR validation diagnostics structured and catalog-backed
